[project]
name = "hhandika-stats"
version = "0.1.0"
description = "GitHub stats README updater and Material 3 SVG generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
update-stats = "update_stats:main"

[tool.pytest.ini_options]
pythonpath = ["."]
